objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Products_Offered__c</fullName>
        <label>Products Offered Historical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlueChoice Advantage</fullName>
                </value>
                <value>
                    <fullName>CDH</fullName>
                </value>
                <value>
                    <fullName>COMP</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Drug</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>FEP</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>Life/ADD/STD</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>POE</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>Standard Group 65+</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>TRAD</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Sold__c</fullName>
        <label>Products Sold Historical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlueChoice Advantage</fullName>
                </value>
                <value>
                    <fullName>CDH</fullName>
                </value>
                <value>
                    <fullName>COMP</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Drug</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>FEP</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>Life/ADD/STD</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>POE</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>Standard Group 65+</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>TRAD</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposal Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProspectingCloseDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProspectingCloseDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProspectingDate__c</fullName>
        <description>This field captures the date and time of the prospecting opportunities</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is populated with date automatically when the stage is Prospecting</inlineHelpText>
        <label>ProspectingDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProspectingDays__c</fullName>
        <description>This field populates number of days opportunity is in prospecting stage</description>
        <formula>IF(!ISPICKVAL(StageName, 'Prospecting'),Null,IF(AND(ISPICKVAL(StageName, 'Prospecting'),IF( !CloseProspect__c ,true,false)),NOW() - ProspectingDate__c,IF(AND(ISPICKVAL(StageName, 'Prospecting'),IF( CloseProspect__c ,true,false)),ProspectingCloseDate__c - ProspectingDate__c,Null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field populates number of days opportunity is in prospecting stage before closing</inlineHelpText>
        <label>ProspectingDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP_Actual_Receipt_Date__c</fullName>
        <description>The date when CareFirst or NCAS/CFA actually receives the RFP from the group</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RFP Actual Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RFP Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RFP_Due_Date__c</fullName>
        <description>The date the proposal is due to the group from CareFirst or NCAS/CFA</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RFP Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Expected_Receipt_Date__c</fullName>
        <description>The Date when CareFirst or NCAS/CFA should expect to receive the RFP from the group</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RFP Expected Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a group has requested a proposal from CareFirst or NCAS/CFA</description>
        <label>RFP Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Strategy__c</fullName>
        <description>Allow the account manager to manually enter what strategy will be used to win the bid</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RFP Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Radar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Radar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating_Type__c</fullName>
        <inlineHelpText>From Renewal Cover Letter</inlineHelpText>
        <label>Rating Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo Only</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>100% Experience</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recd_Quote_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recd Quote Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recd_by_NCAS_Underwriting__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recd by NCAS Underwriting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_by_Underwriting__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Received by MD/DC Underwriting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recent_Sold_Flag__c</fullName>
        <formula>IF(Id= Account.Recent_Sold_Opportunity_ID__c ,true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recent_Sold_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reinstatement_Date__c</fullName>
        <description>This field is created on the opportunity so we are able to capture the most recent Date from the latest Enrollment file and this field is also on the Enrollment__c object to be able to track history</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reinstatement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Products_Offered_Quantity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Products Offered Quantity</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Products_Offered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Products Offered</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Products_Sold_Quantity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Products Sold Quantity</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Products_Sold__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Products Sold</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide renewal / new business proposal release date</inlineHelpText>
        <label>Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Anniversary_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Delivery_Date_to_Sales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Delivery Date to Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_NPN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request NPN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Non_Risk__c</fullName>
        <label>Risk/Non-Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Non-Risk</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <label>SBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small/Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>FEHBP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SB_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SB Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SB Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SL_Analyst__c</fullName>
        <label>SL Analyst</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Madelyn Murtha</fullName>
                </value>
                <value>
                    <fullName>Rich Chaney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SL_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SL Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Savings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>As a result of moving to competitor, if unknown enter Unknown</inlineHelpText>
        <label>Savings %</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sent_To_Market__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent To Market</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_to_NCAS_Underwriting__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent to NCAS/CFA Underwriting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_to_Underwriting__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent to MD/DC Underwriting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Rep_Name_Phone_Drawloop__c</fullName>
        <description>This is used for Drawloop</description>
        <formula>Service_Rep_s__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Rep Name Phone  Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Rep__c</fullName>
        <label>Service Rep(s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barbara Gerber</fullName>
                </value>
                <value>
                    <fullName>Bernice Morris</fullName>
                </value>
                <value>
                    <fullName>Bonita Bell</fullName>
                </value>
                <value>
                    <fullName>Casey McCoy</fullName>
                </value>
                <value>
                    <fullName>Casteel Johnson</fullName>
                </value>
                <value>
                    <fullName>Cheryl Coles</fullName>
                </value>
                <value>
                    <fullName>Christopher Taylor</fullName>
                </value>
                <value>
                    <fullName>Crystal Dove</fullName>
                </value>
                <value>
                    <fullName>Danielle Isabelle</fullName>
                </value>
                <value>
                    <fullName>Denise Mosco</fullName>
                </value>
                <value>
                    <fullName>Dina Fiorito</fullName>
                </value>
                <value>
                    <fullName>Donna Hase</fullName>
                </value>
                <value>
                    <fullName>Dorothy McGill</fullName>
                </value>
                <value>
                    <fullName>Elizabeth Fuhrman</fullName>
                </value>
                <value>
                    <fullName>Faye Flora</fullName>
                </value>
                <value>
                    <fullName>Georgia Greenwell</fullName>
                </value>
                <value>
                    <fullName>Gordon Kay</fullName>
                </value>
                <value>
                    <fullName>Heather Seilonen</fullName>
                </value>
                <value>
                    <fullName>Jennifer Fowler</fullName>
                </value>
                <value>
                    <fullName>Joan Barbour</fullName>
                </value>
                <value>
                    <fullName>Jordan Anderson</fullName>
                </value>
                <value>
                    <fullName>Jose Cabrera</fullName>
                </value>
                <value>
                    <fullName>Karen Gambrell</fullName>
                </value>
                <value>
                    <fullName>Kathryn Devaney</fullName>
                </value>
                <value>
                    <fullName>Keith Berke</fullName>
                </value>
                <value>
                    <fullName>Kelly Ebner</fullName>
                </value>
                <value>
                    <fullName>KeTonya Cheatham</fullName>
                    <label>Ketonya Cheatham</label>
                </value>
                <value>
                    <fullName>Kevin Hauer</fullName>
                </value>
                <value>
                    <fullName>LaGretta Lyons</fullName>
                </value>
                <value>
                    <fullName>Lauren Brueckman</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Rep_s__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Rep(s)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_By_Carrier__c</fullName>
        <label>Sold By Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CareFirst</fullName>
                </value>
                <value>
                    <fullName>HM</fullName>
                </value>
                <value>
                    <fullName>IOARE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RAS</fullName>
                </value>
                <value>
                    <fullName>Sunlife</fullName>
                </value>
                <value>
                    <fullName>Swiss Re Corporate Solutions</fullName>
                </value>
                <value>
                    <fullName>Symetra</fullName>
                </value>
                <value>
                    <fullName>Tokio Marine HCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sold Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Spec_Ded_Offered_1__c</fullName>
        <label>Spec Ded Offered 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spec_Ded_Offered_2__c</fullName>
        <label>Spec Ded Offered 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spec_Ded_Offered_3__c</fullName>
        <label>Spec Ded Offered 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spec_Ded_Sold__c</fullName>
        <label>Spec Ded Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stage_Status__c</fullName>
        <formula>CASE(StageName,
"Proposal", "Proposal",
"Benefit Request","Proposal",
"Underwriting", "Proposal",
"RFP", "Proposal", 
"Quote Delivered", "Proposal",
"ARC Approval", "Proposal",
"Dead", "Dead",
"Sold", "Sold",
"Other")</formula>
        <label>Stage Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Strengths</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successor_Benefit_Comparison__c</fullName>
        <label>Successor Benefit Comparison</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comparable</fullName>
                </value>
                <value>
                    <fullName>Lesser</fullName>
                </value>
                <value>
                    <fullName>Richer</fullName>
                </value>
                <value>
                    <fullName>Will Not Provide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facets</fullName>
                </value>
                <value>
                    <fullName>NASCO</fullName>
                </value>
                <value>
                    <fullName>National Alliance</fullName>
                </value>
                <value>
                    <fullName>LuminX</fullName>
                </value>
                <value>
                    <fullName>Network Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Groups Termination Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Total_Contracts__c</fullName>
        <description>Adds up all products sold</description>
        <label>Estimated Actual Contracts - Test</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ListPrice</field>
            <operation>lessThan</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Sold__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Dental_Contracts__c</fullName>
        <description>This field rolls up the Contract counts of Latest Dental Products from the Enrollment related list.</description>
        <label>Total Dental Contracts</label>
        <summarizedField>Enrollment__c.Contracts__c</summarizedField>
        <summaryFilterItems>
            <field>Enrollment__c.Latest_Enrollment__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Enrollment__c.Processed_Type__c</field>
            <operation>equals</operation>
            <value>D</value>
        </summaryFilterItems>
        <summaryForeignKey>Enrollment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Drug_Contracts__c</fullName>
        <description>This field rolls up the Contract counts of Latest Drug Products from the Enrollment related list.</description>
        <label>Total Drug Contracts</label>
        <summarizedField>Enrollment__c.Contracts__c</summarizedField>
        <summaryFilterItems>
            <field>Enrollment__c.Latest_Enrollment__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Enrollment__c.Processed_Type__c</field>
            <operation>equals</operation>
            <value>R</value>
        </summaryFilterItems>
        <summaryForeignKey>Enrollment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Medical_Contracts__c</fullName>
        <description>This field rolls up the Contract counts of Medical Products from the Enrollment related list.</description>
        <label>Total Medical Contracts</label>
        <summarizedField>Enrollment__c.Contracts__c</summarizedField>
        <summaryFilterItems>
            <field>Enrollment__c.Processed_Type__c</field>
            <operation>equals</operation>
            <value>M</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Enrollment__c.Latest_Enrollment__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </summaryFilterItems>
        <summaryForeignKey>Enrollment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Vision_Contracts__c</fullName>
        <description>This field rolls up the Contract counts of Latest Vision Products from the Enrollment related list.</description>
        <label>Total Vision Contracts</label>
        <summarizedField>Enrollment__c.Contracts__c</summarizedField>
        <summaryFilterItems>
            <field>Enrollment__c.Latest_Enrollment__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Enrollment__c.Processed_Type__c</field>
            <operation>equals</operation>
            <value>V</value>
        </summaryFilterItems>
        <summaryForeignKey>Enrollment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transitioned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transitioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UW_Renewal_Release_Date__c</fullName>
        <description>Populated by the AIA Admin and UW users and viewable (not editable) by all other users.  The new field shall display in the MD/DC Underwriting section underneath the MD/DC Underwriter field.
Story: US208</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UW Renewal Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>U_W_Sales_Management_Involved__c</fullName>
        <label>U/W - Sales Management Involved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnderwriterUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UnderwriterUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <description>Name of assigned underwriter.</description>
        <label>MD/DC Underwriter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amanda Nichols</fullName>
                </value>
                <value>
                    <fullName>Aviva Bezrodny</fullName>
                </value>
                <value>
                    <fullName>Bethany Smith</fullName>
                </value>
                <value>
                    <fullName>Brandi Wiggins</fullName>
                </value>
                <value>
                    <fullName>Brian Williams</fullName>
                </value>
                <value>
                    <fullName>Codey Sellers</fullName>
                </value>
                <value>
                    <fullName>Dana Pospisil</fullName>
                </value>
                <value>
                    <fullName>Diane Lentz</fullName>
                </value>
                <value>
                    <fullName>Douglas Stone</fullName>
                </value>
                <value>
                    <fullName>Ed Haley</fullName>
                </value>
                <value>
                    <fullName>Eric Ho</fullName>
                </value>
                <value>
                    <fullName>Eunice Addo</fullName>
                </value>
                <value>
                    <fullName>Felicity Prince</fullName>
                </value>
                <value>
                    <fullName>Joyce Mann</fullName>
                </value>
                <value>
                    <fullName>Joy Routson</fullName>
                </value>
                <value>
                    <fullName>Kafil Patwary</fullName>
                </value>
                <value>
                    <fullName>Kathy Wolf</fullName>
                </value>
                <value>
                    <fullName>Kevin Groves</fullName>
                </value>
                <value>
                    <fullName>Lauren Richardson</fullName>
                </value>
                <value>
                    <fullName>Leo Coley</fullName>
                </value>
                <value>
                    <fullName>Manigeh Hauff</fullName>
                </value>
                <value>
                    <fullName>Mary Beth Breeden</fullName>
                </value>
                <value>
                    <fullName>Mary Gemmill</fullName>
                </value>
                <value>
                    <fullName>Murriel McManus</fullName>
                </value>
                <value>
                    <fullName>Shade Dada</fullName>
                </value>
                <value>
                    <fullName>Shahrose Noman</fullName>
                </value>
                <value>
                    <fullName>Shirley Solloway</fullName>
                </value>
                <value>
                    <fullName>Toyin George</fullName>
                </value>
                <value>
                    <fullName>Tyler Steckbeck</fullName>
                </value>
                <value>
                    <fullName>William Thornhill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriting_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MD/DC Underwriting Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Underwriting_Entity__c</fullName>
        <description>Where Underwriting is performed.  Usually the location of the company headquarters.</description>
        <label>Underwriting Entity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CFA</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>NCAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriting_Status__c</fullName>
        <description>Status in underwritng process. To be completed by Underwriting.</description>
        <label>MD/DC Underwriting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>DeclinedToQuote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Weaknesses</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>